[gd_scene load_steps=10 format=3 uid="uid://bvk4ae0o11v4h"]

[ext_resource type="Script" path="res://Scripts/firewall_boss.gd" id="1_ut7ia"]
[ext_resource type="Texture2D" uid="uid://ccimwgxfcql4i" path="res://Sprites/Characters/Fire_Wall.png" id="1_vrv8r"]
[ext_resource type="PackedScene" uid="uid://cq1e21emss80p" path="res://Scenes/health_bar.tscn" id="3_5sq4e"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5jh1o"]
atlas = ExtResource("1_vrv8r")
region = Rect2(0, 0, 308, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q5weo"]
atlas = ExtResource("1_vrv8r")
region = Rect2(0, 64, 308, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r1hdo"]
atlas = ExtResource("1_vrv8r")
region = Rect2(0, 128, 308, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_763bc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5jh1o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q5weo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r1hdo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q5weo")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t8eip"]
size = Vector2(308, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j4myv"]
size = Vector2(308, 64)

[node name="firewall_boss" type="CharacterBody2D"]
script = ExtResource("1_ut7ia")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_763bc")
frame_progress = 0.478297

[node name="HealthBar" parent="." instance=ExtResource("3_5sq4e")]
offset_left = -38.0
offset_top = 37.0
offset_right = 39.0
offset_bottom = 41.0

[node name="fire_spawn" type="Timer" parent="."]
wait_time = 5.0

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_t8eip")
debug_color = Color(0.982589, 0, 0.360821, 0.42)

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(0, 32)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_j4myv")

[connection signal="timeout" from="fire_spawn" to="." method="_on_fire_spawn_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
